--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
         "issues": "https://github.com/tsarouxas/ebay-sdk-php/issues"
     },
     "require": {
-        "php": ">=5.5",
-        "guzzlehttp/guzzle": "~6.0",
-        "guzzlehttp/psr7": "~1.0",
-        "guzzlehttp/promises": "^1.1"
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/psr7": "^2.0",
+        "guzzlehttp/promises": "^1.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "squizlabs/php_codesniffer": "2.*"
+        "phpunit/phpunit": "^10.0",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
         "psr-4": {
