--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,6 @@
             "DTS\\eBaySDK\\Test\\": "test/"
         },
         "classmap": ["build/"]
-    }
+    },
+    "minimum-stability": "stable"
 }
